src/objects/loan__Collateral_Valuation__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>loan__Add_ons_Valuation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Add-ons Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Collateral__c</fullName>
        <label>Collateral</label>
        <referenceTo>loan__Collateral__c</referenceTo>
        <relationshipName>Collateral_Valuation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Retail_Valuation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Retail Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Usage__c</fullName>
        <label>Usage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Valuation_Source__c</fullName>
        <label>Valuation Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Wholesale_Valuation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wholesale Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Collateral Valuation (Deprecated)</label>
    <nameField>
        <displayFormat>CVID-{0000000000}</displayFormat>
        <label>Collateral Valuation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral Valuation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>